<resources>
    <string name="app_name">Async Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="myCoulour">#3399CC</string>
    <string name="name">Name</string>
    <string name="value_convert">value to convert</string>
    <string name="convert">Convert</string>
    <string name="div">/</string>
    <string name="plus">+</string>
    <string name="times">*</string>
    <string name="sub">-</string>
    <string name="equals">=</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="title_activity_option">OptionActivity</string>
</resources>
