<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="clip_horizontal|clip_vertical|center_horizontal|fill_horizontal|center_vertical|fill_vertical"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#00000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/ope"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="InefficientWeight,NestedWeights,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="9"
                    android:text="@string/_9"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="8"
                    android:text="@string/_8"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="7"
                    android:text="@string/_7"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btntimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="*"
                    android:text="@string/times"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="6"
                    android:text="@string/_6"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/_5"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="4"
                    android:text="@string/_4"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="+"
                    android:text="@string/plus"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="3"
                    android:text="@string/_3"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="2"
                    android:text="@string/_2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="1"
                    android:text="@string/_1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="-"
                    android:text="@string/sub"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bnt0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="0"
                    android:text="@string/_0"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btndiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:tag="@string/div"
                    android:text="@string/div"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

        <!--        <Button-->
        <!--            android:id="@+id/btnequals"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1"-->
        <!--            android:onClick="equals"-->
        <!--            android:text="@string/equals" />-->

    </LinearLayout>

</LinearLayout>